--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,5 @@
-torch
-torchvision
+streamlit
+opencv-python-headless
+deepface
+requests
 numpy
-pandas
-matplotlib
-streamlit
-opencv-python
-PySimpleGUI
-deepface
-tensorflow==2.18.0
-tf-keras
-opencv-python-headless==4.5.5.64
-deepface
-streamlit
