--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
+opencv-python-headless==4.11.0.86
+deepface==0.0.93
 streamlit
-opencv-python-headless
-deepface
 requests
 numpy<2
 protobuf==3.20.3
 pybind11>=2.12
-tf-keras
+tf-keras==2.19.0
 tensorflow==2.12.0
-
-
-libgl1
-libglib2.0-0
